@@ -15,6 +15,7 @@ CpoolNameAndType.java \
 CpoolRef.java \
 CpoolString.java \
 CpoolUtf8.java \
+EnclosingMethodAttr.java \
 Filter.java \
 Location.java Field.java \
 Label.java IfState.java TryState.java SwitchState.java \
